--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-chemdraw-xlsx"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -26,3 +26,9 @@ xlsxwriter = "0.6"
 
 regex = "1.8.4"
 # urlencoding = "2.1"
+
+# xml-rs = "0.8.14"
+
+serde-xml-rs = "0.6.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
